testdata/baselines/reference/submodule/compiler/jsxFragmentFactoryNoUnusedLocals.errors.txt
jsxFragmentFactoryNoUnusedLocals.tsx(2,1): error TS6192: All imports in import declaration are unused.
jsxFragmentFactoryNoUnusedLocals.tsx(2,41): error TS2307: Cannot find module 'react' or its corresponding type declarations.
jsxFragmentFactoryNoUnusedLocals.tsx(9,11): error TS6198: All destructured elements are unused.


==== jsxFragmentFactoryNoUnusedLocals.tsx (3 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import { Fragment, createElement } from "react"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6192: All imports in import declaration are unused.
                                            ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    type CounterProps = {
        count?: number
    }
    
    export function Counter({ count = 0 }: CounterProps) {
        const [cnt, setCnt] = null as any;
              ~~~~~~~~~~~~~
!!! error TS6198: All destructured elements are unused.
        return <>
            <p>{cnt}</p>
            <button onClick={() => setCnt((prev) => prev + 1)} type="button">Update</button>
        </>
    }